[gd_scene load_steps=2 format=3 uid="uid://chdbik0tn6opq"]

[ext_resource type="Script" uid="uid://raspesula6st" path="res://towers/hover_component.gd" id="1_jv4oh"]

[node name="HoverComponent" type="Area2D"]
script = ExtResource("1_jv4oh")

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
